# vins

./: CMakeLists.txt  nodelet.xml  package.xml
code/: dense_optical.cpp  depth.txt  depth_cluster.cpp  depthclean.cpp  dvins.cpp  es.cpp  feature.cpp  sam.py
config/: bdr_vio.yaml  run.rviz
docker/: Dockerfile  Dockerfile_rgbd  build.sh  run.sh
docker_rgbd/: Dockerfile  build.sh  run.sh
include/: param.h  parameters.h  timer.h  utility.h  visualization.h
include/feature_tracker/: point_tracker.h
include/object_detection/: object_detection.h
launch/: estimator.launch  feature_test.launch  feature_tracker.launch  nodelet_vins.launch  object_detection.launch  single_test.launch  vio.launch
src/: rosNodeTest.cpp
src/feature_tracker/: feature_tracker_node.cpp  feature_tracker_nodelet.cpp  feature_tracker_test.cpp  point_tracker.cpp  single_image_test.cpp
src/object_detection/: depth_cluster.cpp  object_detection_node.py  object_detection_nodelet.cpp
src/vins_estimator/: vins_estimator_node.cpp
